# Third-person-name-tag-with-fps-display

./: CMakeLists.txt
.github/workflows/: build.yml
include/pl/: Gloss.h  Signature.h
src/: main.cpp
